commit ReWork Design - fix animelist and gallery

--- a/gallery.html
+++ b/gallery.html
@@ -200,9 +200,9 @@
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/KimiNoNawa/Screenshot (331).png" data-caption="Kimi No Nawa">
+                                            <a class="lightbox" href="img/gallery/va11halla.png" data-caption="Va11 Hall-A">
                                                 <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/KimiNoNawa/Screenshot (331).png">
+                                                    src="img/gallery/va11halla.png">
                                             </a>
                                         </div>
                                         <div class="col-md-6 col-lg-4 item ">
