--- a/listAnimeList.html
+++ b/listAnimeList.html
@@ -260,167 +260,190 @@
                     <div class=" animeList">
 
                       <h6 id="#">#</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="A">A</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="B">B</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="C">C</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="D">D</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="E">E</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="F">F</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="G">G</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="H">H</h6>
-                      <hr>
                       <ul class="list-group">
                         <li><a href="animePagesHorimiya.html">Horimiya</a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="I">I</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="J">J</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="K">K</h6>
-                      <hr>
                       <ul class="list-group">
                         <li><a href="animePagesKimiNoNawa.html">Kimi No Nawa.</a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="L">L</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="M">M</h6>
-                      <hr>
                       <ul class="list-group">
                         <li><a href="animePagesMajoNoTabi.html">Majo No Tabitabi</a></li>
                         <li><a href="animePagesMushokuTensei.html">Mushoku Tensei: Isekai Ittara Honki Dasu</a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="N">N</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="O">O</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="P">P</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="Q">Q</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="R">R</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="S">S</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="T">T</h6>
-                      <hr>
                       <ul class="list-group">
                         <li><a href="animePagesTenkiNoKo.html">Tenki No Ko</a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="U">U</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="V">V</h6>
-                      <hr>
                       <ul class="list-group">
-                        <li><a href="animePagesVioletOva.html">Violet Evergarden: Kitto "Ai" wo Shiru Hi ga Kuru no Darou</a></li>
+                        <li><a href="animePagesVioletOva.html">Violet Evergarden: Kitto "Ai" wo Shiru Hi ga Kuru no
+                            Darou</a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="W">W</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="X">X</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="Y">Y</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
                       <h6 id="Z">Z</h6>
-                      <hr>
+
                       <ul class="list-group">
                         <li><a href="#"></a></li>
                       </ul>
+                      <hr>
 
 
                     </div>
