commit ReWork Design - fix animeUpdate responsive

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                   <a href="animePagesKimiNoNawa.html">
                     <div class="row no-gutters">
                       <div class="imgContainer"  >
-                        <img src="img/Screenshot/KimiNoNawa/Screenshot (317).png" style="height: 110px;">
+                        <img src="img/Screenshot/KimiNoNawa/Screenshot (317).png" class="updateCardImg">
                         <div class="card-img-overlay anchor-bg-color-update overlay">
                         </div>
                       </div>
@@ -411,7 +411,7 @@
                   <a href="animePagesTonikakuKawaii.html">
                     <div class="row no-gutters">
                       <div class="imgContainer"  >
-                        <img src="img/Screenshot/Tonikawa/Screenshot (103).png" style="height: 110px;">
+                        <img src="img/Screenshot/Tonikawa/Screenshot (103).png" class="updateCardImg">
                         <div class="card-img-overlay anchor-bg-color-update overlay">
                         </div>
                       </div>
@@ -436,7 +436,7 @@
                   <a href="animePagesMajoNoTabi.html">
                     <div class="row no-gutters">
                       <div class="imgContainer">
-                        <img src="img/Screenshot/MajoNoTabi/Screenshot (113).png" style="height: 110px;">
+                        <img src="img/Screenshot/MajoNoTabi/Screenshot (113).png" class="updateCardImg">
                         <div class="card-img-overlay anchor-bg-color-update overlay">
                         </div>
                       </div>
