commit ReWork Design - card color rework

--- a/index.html
+++ b/index.html
@@ -218,8 +218,10 @@
 
               <!-- #CardMovie-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div>
+                  <a class="btn btn-success btn-block" href="typeMovie.html"> Movie </a>
+                </div>
                 <div class="card">
-                  <a class="btn btn-success" href="typeMovie.html"> Movie </a>
                   <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top "
                       src="img/Anime/Kimi_no_nawa.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -235,8 +237,10 @@
 
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div>
+                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                </div>
                 <div class="card">
-                  <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePagesTonikakuKawaii.html" class="myshow"><img class="card-img-top"
                       src="img/Anime/fly_me_to_moon.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -252,8 +256,10 @@
 
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div>
+                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                </div>
                 <div class="card">
-                  <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePagesMajoNoTabi.html" class="myshow"><img class="card-img-top"
                       src="img/Anime/majo_no_tabi.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -269,8 +275,10 @@
 
               <!-- #CardSpecial-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div>
+                  <a class="btn btn-danger btn-block" href="typeSpecial.html"> Special </a>
+                </div>
                 <div class="card">
-                  <a class="btn btn-danger" href="typeSpecial.html"> Special </a>
                   <a href="animePagesVioletOva.html" class="myshow"><img class="card-img-top "
                       src="img/Anime/violet_ova.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -287,8 +295,10 @@
 
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div>
+                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                </div>
                 <div class="card">
-                  <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePagesMushokuTensei.html" class="myshow"><img class="card-img-top"
                       src="img/Anime/mushoku_tensei.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -305,8 +315,10 @@
 
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div>
+                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                </div>
                 <div class="card">
-                  <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePagesToaruRailgunT.html" class="myshow"><img class="card-img-top"
                       src="img/Anime/toaru_railgunT.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -322,8 +334,10 @@
 
               <!-- #CardTv-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div>
+                  <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                </div>
                 <div class="card">
-                  <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                   <a href="animePagesHorimiya.html" class="myshow"><img class="card-img-top"
                       src="img/Anime/horimiya.jpg">
                     <div class="card-img-overlay anchor-bg-color overlay">
@@ -339,8 +353,10 @@
 
               <!-- #CardMovie-->
               <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                <div>
+                  <a class="btn btn-success btn-block" href="typeMovie.html"> Movie </a>
+                </div>
                 <div class="card">
-                  <a class="btn btn-success" href="typeMovie.html"> Movie </a>
                   <a href="animePagesTenkiNoKo.html" class="myshow"><img class="card-img-top "
                       src="img/Anime/tenki_no_ko.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
