--- a/typeSpecial.html
+++ b/typeSpecial.html
@@ -159,8 +159,10 @@
 
                             <!-- #CardSpecial-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                                <div>
+                                    <a class="btn btn-danger btn-block" href="typeSpecial.html"> Special </a>
+                                </div>
                                 <div class="card">
-                                    <a class="btn btn-danger" href="typeSpecial.html"> Special </a>
                                     <a href="animePagesVioletOva.html" class="myshow"><img class="card-img-top "
                                             src="img/Anime/violet_ova.png">
                                         <div class="card-img-overlay anchor-bg-color overlay">
@@ -171,7 +173,8 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesVioletOva.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesVioletOva.html#download">
+                                        Download </a>
                                 </div>
                             </div>
                             <!-- #endCardSpecial -->
