--- a/typeTv.html
+++ b/typeTv.html
@@ -159,8 +159,10 @@
 
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                                <div>
+                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                </div>
                                 <div class="card">
-                                    <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                                     <a href="animePagesTonikakuKawaii.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/fly_me_to_moon.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
@@ -170,15 +172,18 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesTonikakuKawaii.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesTonikakuKawaii.html#download">
+                                        Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
 
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                                <div>
+                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                </div>
                                 <div class="card">
-                                    <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                                     <a href="animePagesMajoNoTabi.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/majo_no_tabi.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
@@ -188,15 +193,18 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesMajoNoTabi.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesMajoNoTabi.html#download">
+                                        Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
 
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                                <div>
+                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                </div>
                                 <div class="card">
-                                    <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                                     <a href="animePagesMushokuTensei.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/mushoku_tensei.png">
                                         <div class="card-img-overlay anchor-bg-color overlay">
@@ -207,15 +215,18 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesMushokuTensei.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesMushokuTensei.html#download">
+                                        Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
 
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                                <div>
+                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                </div>
                                 <div class="card">
-                                    <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                                     <a href="animePagesToaruRailgunT.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/toaru_railgunT.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
@@ -225,15 +236,18 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesToaruRailgunT.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesToaruRailgunT.html#download">
+                                        Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
 
                             <!-- #CardTv-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                                <div>
+                                    <a class="btn btn-warning btn-block" href="typeTv.html"> Tv Series </a>
+                                </div>
                                 <div class="card">
-                                    <a class="btn btn-warning" href="typeTv.html"> Tv Series </a>
                                     <a href="animePagesHorimiya.html" class="myshow"><img class="card-img-top"
                                             src="img/Anime/horimiya.jpg">
                                         <div class="card-img-overlay anchor-bg-color overlay">
@@ -242,7 +256,8 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesHorimiya.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesHorimiya.html#download">
+                                        Download </a>
                                 </div>
                             </div>
                             <!-- #endCardTv -->
