--- a/typeMovie.html
+++ b/typeMovie.html
@@ -160,25 +160,31 @@
 
                             <!-- #CardMovie-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                                <div>
+                                    <a class="btn btn-success btn-block" href="typeMovie.html"> Movie </a>
+                                </div>
                                 <div class="card">
-                                    <a class="btn btn-success" href="typeMovie.html"> Movie </a>
                                     <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top "
                                             src="img/Anime/Kimi_no_nawa.png">
                                         <div class="card-img-overlay anchor-bg-color overlay">
-                                            <h6 class="card-title img-overlay-anchor"><strong>Kimi No Na wa.</strong></h6>
+                                            <h6 class="card-title img-overlay-anchor"><strong>Kimi No Na wa.</strong>
+                                            </h6>
                                             <small class="text-white">Post on 20-03-2020</small>
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesKimiNoNawa.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesKimiNoNawa.html#download">
+                                        Download </a>
                                 </div>
                             </div>
                             <!-- #endCardMovie -->
 
                             <!-- #CardMovie-->
                             <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 my-col catalogCard">
+                                <div>
+                                    <a class="btn btn-success btn-block" href="typeMovie.html"> Movie </a>
+                                </div>
                                 <div class="card">
-                                    <a class="btn btn-success" href="typeMovie.html"> Movie </a>
                                     <a href="animePagesTenkiNoKo.html" class="myshow"><img class="card-img-top "
                                             src="img/Anime/tenki_no_ko.png">
                                         <div class="card-img-overlay anchor-bg-color overlay">
@@ -187,7 +193,8 @@
                                         </div>
                                 </div>
                                 <div>
-                                    <a class="btn btn-primary btn-block" href="animePagesTenkiNoKo.html#download"> Download </a>
+                                    <a class="btn btn-primary btn-block" href="animePagesTenkiNoKo.html#download">
+                                        Download </a>
                                 </div>
                             </div>
                             <!-- #endCardMovie -->
