commit ReWork Design - index side m p rework

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           <!-- #endSlideshow -->
 
           <!-- #Catalog-->
-          <div class="col-12">
+          <div class="col-12 px-4">
             <div class="row">
 
               <!-- #CardMovie-->
@@ -372,7 +372,7 @@
 
 
               <!-- #Pagination-->
-              <div class="col-12 mt-4">
+              <!-- <div class="col-12 mt-4">
                 <nav aria-label="Page navigation example">
                   <ul class="pagination justify-content-center">
                     <li class="page-item"><a class="page-link">Previous</a></li>
@@ -381,12 +381,18 @@
                     <li class="page-item"><a class="page-link" onclick="BlockedTest()">Next</a></li>
                   </ul>
                 </nav>
-              </div>
+              </div> -->
               <!-- #endPagination -->
 
+            </div>
+          </div>
 
-              <!-- #Anime Latest Update-->
-              <div class="col-12 px-0 py-1 text-justify">
+          <!-- #endcatalog -->
+
+          <!-- #Anime Latest Update-->
+          <div class="col-12 ">
+            <div class="row">
+              <div class="col-12 py-1 text-justify">
                 <a href="listLastestUpdate.html">
                   <div class="btn-primary text-center rounded-corner border score mb-1">
                     Anime Latest Update
@@ -394,14 +400,14 @@
                 </a>
               </div>
               <!-- #EndAnime Latest Update-->
-
+  
               <!-- #CardUpdate-->
               <div class="col-12 mb-3 rounded-corner">
                 <a class="btn btn-success btn-block" href="typeMovie.html"> </a>
                 <div class="card updateCard">
                   <a href="animePagesKimiNoNawa.html">
                     <div class="row no-gutters">
-                      <div class="imgContainer"  >
+                      <div class="imgContainer">
                         <img src="img/Screenshot/KimiNoNawa/Screenshot (317).png" class="updateCardImg">
                         <div class="card-img-overlay anchor-bg-color-update overlay">
                         </div>
@@ -419,14 +425,14 @@
                 </div>
               </div>
               <!-- #CardUpdate -->
-
+  
               <!-- #CardUpdate-->
               <div class="col-12 mb-3  rounded-corner">
                 <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
                 <div class="card updateCard">
                   <a href="animePagesTonikakuKawaii.html">
                     <div class="row no-gutters">
-                      <div class="imgContainer"  >
+                      <div class="imgContainer">
                         <img src="img/Screenshot/Tonikawa/Screenshot (103).png" class="updateCardImg">
                         <div class="card-img-overlay anchor-bg-color-update overlay">
                         </div>
@@ -444,7 +450,7 @@
                 </div>
               </div>
               <!-- #CardUpdate -->
-
+  
               <!-- #CardUpdate-->
               <div class="col-12 mb-3 rounded-corner">
                 <a class="btn btn-warning btn-block" href="typeTv.html"> </a>
@@ -469,7 +475,7 @@
                 </div>
               </div>
               <!-- #CardUpdate -->
-
+  
               <!-- #Anime Latest Update-->
               <div class="col-8 offset-2  px-0 py-1 text-justify">
                 <a href="listLastestUpdate.html">
@@ -478,13 +484,10 @@
                   </div>
                 </a>
               </div>
-              <!-- #EndAnime Latest Update-->
-
-
-
             </div>
           </div>
-          <!-- #endcatalog -->
+          <!-- #EndAnime Latest Update-->
+
 
           <!-- #Iklan Box-->
           <div class="mb-2 justify-content-center col-12 mx-auto text-center">
