--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
 
               <!-- #Pagination-->
-              <!-- <div class="col-12 mt-4">
+              <div class="col-12 mt-4">
                 <nav aria-label="Page navigation example">
                   <ul class="pagination justify-content-center">
                     <li class="page-item"><a class="page-link">Previous</a></li>
@@ -381,7 +381,7 @@
                     <li class="page-item"><a class="page-link" onclick="BlockedTest()">Next</a></li>
                   </ul>
                 </nav>
-              </div> -->
+              </div>
               <!-- #endPagination -->
 
             </div>
@@ -391,7 +391,7 @@
 
           <!-- #Anime Latest Update-->
           <div class="col-12 ">
-            <div class="row">
+            <div class="row justify-content-center">
               <div class="col-12 py-1 text-justify">
                 <a href="listLastestUpdate.html">
                   <div class="btn-primary text-center rounded-corner border score mb-1">
@@ -476,8 +476,8 @@
               </div>
               <!-- #CardUpdate -->
   
-              <!-- #Anime Latest Update-->
-              <div class="col-8 offset-2  px-0 py-1 text-justify">
+              <!-- #Anime Latest Update--> 
+              <div class="col-3 px-0 py-1 text-justify">
                 <a href="listLastestUpdate.html">
                   <div class="seeMoreBtn btn-primary text-center rounded-corner border score mb-1">
                     See more..
