--- a/footDmca.html
+++ b/footDmca.html
@@ -264,32 +264,29 @@
       </div>
 
       <!-- #Sidebar-->
-      <div class="col-12 col-lg-3 ">
+      <div class="col-12 col-lg-3 float-right">
         <div class="col-12">
-          <div class="row">
-            <div class="col-12  mb-1">
-              <div class="social bg-dark mx-auto">
-                <a href="https://www.instagram.com/serayufansub/"><i class="bi bi-instagram"></i></a>
-                <a href="https://discord.com/invite/ycTY2gk9k3"><i class="bi bi-discord"></i></a>
-                <a href="https://www.facebook.com/serayufansub60fps/"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.youtube.com/channel/UCUJYB4Sr7A2R7RhjPeEiW_Q"><i class="bi bi-youtube"></i></a>
-              </div>
+          <div class="row justify-content-center">
+            <div id="gfrom" class="rounded-corner mb-1">
+              <!-- <a href="randomPatchNote.html">
+              <img src="img/banner_gform.png" alt="" class="rounded-corner">
+              </a> -->
             </div>
           </div>
         </div>
         <div class="col-12 sticky-top">
-          <div class="row">
+          <div class="row justify-content-center">
 
             <div class="col-12 col-sm-6 col-lg-12 mb-1 d-flex justify-content-center ">
-              <iframe class="embed-responsive-item" src="https://discord.com/widget?id=788456247476617326&theme=dark"
-                width="240" height="400" allowtransparency="true" frameborder="0"
+              <iframe src="https://discord.com/widget?id=788456247476617326&theme=dark" width="225" height="350"
+                allowtransparency="true" frameborder="0"
                 sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-1 d-flex justify-content-center ">
-              <iframe class="embed-responsive-item"
-                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=240&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                width="240" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+              <iframe
+                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=225&height=300&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                width="225" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                 allowfullscreen="true"
                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
